src/objects/Controlled_Document__c.object
<CustomObject>
    <fields>
        <fullName>Region__c</fullName>
        <inlineHelpText>The region (or Central Office) involved in originating or overseeing this Controlled Document record.</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Central Office</fullName>
                </value>
                <value>
                    <fullName>Region 1</fullName>
                </value>
                <value>
                    <fullName>Region 2</fullName>
                </value>
                <value>
                    <fullName>Region 3</fullName>
                </value>
                <value>
                    <fullName>Region 4</fullName>
                </value>
                <value>
                    <fullName>Region 5</fullName>
                </value>
                <value>
                    <fullName>Region 6</fullName>
                </value>
                <value>
                    <fullName>Region 7</fullName>
                </value>
                <value>
                    <fullName>Region 8</fullName>
                </value>
                <value>
                    <fullName>Region 9</fullName>
                </value>
                <value>
                    <fullName>Region 10</fullName>
                </value>
                <value>
                    <fullName>National Capital Region</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Due_Date_External_Delivery_1__c</fullName>
        <description>The date due to external office.</description>
        <inlineHelpText>The date due to external office.</inlineHelpText>
        <label>Requested Due Date - External Delivery 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Due_Date_External_Delivery_2__c</fullName>
        <description>The date due to other external office (if needed).</description>
        <inlineHelpText>The date due to other external office (if needed).</inlineHelpText>
        <label>Requested Due Date - External Delivery 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Draft__c</fullName>
        <inlineHelpText>This is the response draft.</inlineHelpText>
        <label>Response Draft</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Restrict_Record_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field restricts access to the record to only those users who are collaborators, owners, or approvers on a record. It also includes ExecSec users if the record has been exposed to ExecSec.</description>
        <inlineHelpText>When selected, this field restricts access to the Controlled Document record to only those users who are Collaborators, Approvers, or the Owner of the record. It also includes ExecSec users if the record has been exposed to ExecSec.</inlineHelpText>
        <label>Restrict Record Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signature_Date__c</fullName>
        <inlineHelpText>The date a final signature was obtained on the record.</inlineHelpText>
        <label>Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <inlineHelpText>An indication of where in the life-cycle of a Controlled Document this record resides. This field is manually updated by users with edit access to the Controlled Document record.</inlineHelpText>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Closure</fullName>
                </value>
                <value>
                    <fullName>Awaiting Signature</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Concurrence</fullName>
                </value>
                <value>
                    <fullName>Directives Clearance</fullName>
                </value>
                <value>
                    <fullName>Directives Coordination</fullName>
                </value>
                <value>
                    <fullName>Drafting</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>External Review</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>Revise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Division__c</fullName>
        <inlineHelpText>The sub-division of the Originating Service/Staff Office selected.</inlineHelpText>
        <label>Office / Portfolio</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Originating_Office__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AC - Office of the GSA Chief of Staff</fullName>
                </value>
                <value>
                    <fullName>AD - Office of the Deputy Administrator</fullName>
                </value>
                <value>
                    <fullName>AKE – OCR External Programs Division</fullName>
                </value>
                <value>
                    <fullName>AKN – OCR EEO Program Division</fullName>
                </value>
                <value>
                    <fullName>AKR – OCR Regional Operations Division</fullName>
                </value>
                <value>
                    <fullName>BB - Office of Budget</fullName>
                </value>
                <value>
                    <fullName>BE - Office of Strategic Planning and Performance Management</fullName>
                </value>
                <value>
                    <fullName>BG - Office of Financial Management</fullName>
                </value>
                <value>
                    <fullName>BI - Office of Business and Financial Analytics</fullName>
                </value>
                <value>
                    <fullName>BR - Office of Regional Financial Services</fullName>
                </value>
                <value>
                    <fullName>B1 - Childcare Subsidy Administration Program</fullName>
                </value>
                <value>
                    <fullName>CA - OHRM Office of Account Management</fullName>
                </value>
                <value>
                    <fullName>CM - OHRM Office of Management &amp; Performance Improvement</fullName>
                </value>
                <value>
                    <fullName>CS - OHRM Office of HR Strategy &amp; Services</fullName>
                </value>
                <value>
                    <fullName>DA - OMA Northeast Regions Division</fullName>
                </value>
                <value>
                    <fullName>DB - OMA Southeast Regions Division</fullName>
                </value>
                <value>
                    <fullName>DC - OMA Midwest Regions Division</fullName>
                </value>
                <value>
                    <fullName>DD - OMA Policy &amp; Plans Division</fullName>
                </value>
                <value>
                    <fullName>DE - OMA Western Regions Division</fullName>
                </value>
                <value>
                    <fullName>DP - OMA Operations Division</fullName>
                </value>
                <value>
                    <fullName>DS - OMA GSA Security Division</fullName>
                </value>
                <value>
                    <fullName>GA - CBCA Staff Support Division</fullName>
                </value>
                <value>
                    <fullName>GJ - CBCA Judicial Division</fullName>
                </value>
                <value>
                    <fullName>H1A - Office of Internal Acquisition Division</fullName>
                </value>
                <value>
                    <fullName>H1B - Office of Workplace Management and Services Division</fullName>
                </value>
                <value>
                    <fullName>H1C - Charge Card Division</fullName>
                </value>
                <value>
                    <fullName>H1E - Executive Secretariat Division</fullName>
                </value>
                <value>
                    <fullName>H1F - FOIA &amp; Records Management Division</fullName>
                </value>
                <value>
                    <fullName>H1G - GAO/IG Audit Response Division</fullName>
                </value>
                <value>
                    <fullName>IA - OCIO Office of Governmentwide and Enterprise Solutions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <inlineHelpText>The subject of this Controlled Document.</inlineHelpText>
        <label>Subject</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>.Gov</fullName>
                </value>
                <value>
                    <fullName>Accommodations</fullName>
                </value>
                <value>
                    <fullName>Accomplishments</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>ADR</fullName>
                </value>
                <value>
                    <fullName>Advisory</fullName>
                </value>
                <value>
                    <fullName>Affidavit</fullName>
                </value>
                <value>
                    <fullName>AFGE</fullName>
                </value>
                <value>
                    <fullName>AFM</fullName>
                </value>
                <value>
                    <fullName>AFV</fullName>
                </value>
                <value>
                    <fullName>Agreement</fullName>
                </value>
                <value>
                    <fullName>Air Carriers</fullName>
                </value>
                <value>
                    <fullName>Aircraft</fullName>
                </value>
                <value>
                    <fullName>ALDP</fullName>
                </value>
                <value>
                    <fullName>Allegations</fullName>
                </value>
                <value>
                    <fullName>Allowance</fullName>
                </value>
                <value>
                    <fullName>Ammendments</fullName>
                </value>
                <value>
                    <fullName>Appeal</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Appointment</fullName>
                </value>
                <value>
                    <fullName>Apportionment</fullName>
                </value>
                <value>
                    <fullName>Appreciation</fullName>
                </value>
                <value>
                    <fullName>Appropriations</fullName>
                </value>
                <value>
                    <fullName>Archives</fullName>
                </value>
                <value>
                    <fullName>ARR Act</fullName>
                </value>
                <value>
                    <fullName>ASF</fullName>
                </value>
                <value>
                    <fullName>Assessment</fullName>
                </value>
                <value>
                    <fullName>Assignment</fullName>
                </value>
                <value>
                    <fullName>Auction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <inlineHelpText>A text field that is used to provide any pertinent information not otherwise contained in a separate field on this Controlled Document record.</inlineHelpText>
        <label>Summary</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title_Formula__c</fullName>
        <formula>IF( Congressional__c = TRUE, LEFT(TEXT( Originating_Office__c ),(FIND(&quot; &quot;,TEXT( Originating_Office__c ))))+&quot; - &quot;+ Name + &quot; - &quot; +  Final_Signatory__r.LastName  + &quot; - &quot; + TEXT(Stage__c) + &quot; - &quot; + &quot;C&quot;, LEFT(TEXT( Originating_Office__c ),(FIND(&quot; &quot;,TEXT( Originating_Office__c ))))+&quot; - &quot;+ Name + &quot; - &quot; + Final_Signatory__r.LastName + &quot; - &quot; + TEXT(Stage__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Title is formed by combining the Document ID, the Originating Service/Staff Office code, the last name of the Final Signatory, and a &quot;C&quot; if it is a Congressional-related record.</inlineHelpText>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <description>General topic such as year and type of spend plans.</description>
        <inlineHelpText>General topic such as year and type of spend plans.</inlineHelpText>
        <label>Topic</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Controlled Document</label>
    <listViews>
        <fullName>AK_Office_of_Civil_Rights</fullName>
        <columns>NAME</columns>
        <columns>Title_Formula__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Originating_Office__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Originating_Office__c</field>
            <operation>equals</operation>
            <value>AK - Office of Civil Rights</value>
        </filters>
        <label>AK - Office of Civil Rights</label>
    </listViews>
    <listViews>
        <fullName>A_Office_of_the_Administrator</fullName>
        <columns>NAME</columns>
        <columns>Title_Formula__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Originating_Office__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Originating_Office__c</field>
            <operation>equals</operation>
            <value>A - Office of the Administrator</value>
        </filters>
        <label>A - Office of the Administrator</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Title_Formula__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Originating_Office__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>B_Office_of_Chief_Financial_Officer</fullName>
        <columns>NAME</columns>
        <columns>Title_Formula__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Originating_Office__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Originating_Office__c</field>
            <operation>equals</operation>
            <value>B - Office of the Chief Financial Officer</value>
        </filters>
        <label>B - Office of Chief Financial Officer</label>
    </listViews>
    <listViews>
        <fullName>C_Office_of_Human_Resource_Management</fullName>
        <columns>NAME</columns>
        <columns>Title_Formula__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Originating_Office__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Originating_Office__c</field>
            <operation>equals</operation>
            <value>C - Office of Human Resource Management</value>
        </filters>
        <label>C - Office of Human Resource Management</label>
    </listViews>
    <listViews>
        <fullName>D_Office_of_Mission_Assurance</fullName>
        <columns>NAME</columns>
        <columns>Title_Formula__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Originating_Office__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Originating_Office__c</field>
            <operation>equals</operation>
            <value>D - Office of Mission Assurance</value>
        </filters>
        <label>D - Office of Mission Assurance</label>
    </listViews>
    <listViews>
        <fullName>Documents_Due_Within_One_Week</fullName>
        <columns>NAME</columns>
        <columns>Title_Formula__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Originating_Office__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Due_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>NEXT_N_DAYS:7</value>
        </filters>
        <filters>
            <field>Due_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Documents Due Within One Week</label>
    </listViews>
    <listViews>
        <fullName>Documents_Due_Within_Two_Weeks</fullName>
        <columns>NAME</columns>
        <columns>Title_Formula__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Originating_Office__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Due_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>NEXT_N_DAYS:14</value>
        </filters>
        <filters>
            <field>Due_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Documents Due Within Two Weeks</label>
    </listViews>
    <listViews>
        <fullName>E_Office_of_Small_Business_Utilization</fullName>
        <columns>NAME</columns>
        <columns>Title_Formula__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Originating_Office__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Originating_Office__c</field>
            <operation>equals</operation>
            <value>E - Office of Small Business Utilization</value>
        </filters>
        <label>E - Office of Small Business Utilization</label>
    </listViews>
    <listViews>
        <fullName>G_Civilian_Board_of_Contract_Appeals</fullName>
        <columns>NAME</columns>
        <columns>Title_Formula__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Originating_Office__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Originating_Office__c</field>
            <operation>equals</operation>
            <value>G - Civilan Board of Contract Appeals</value>
        </filters>
        <label>G - Civilian Board of Contract Appeals</label>
    </listViews>
    <listViews>
        <fullName>H_Office_of_Administrative_Services</fullName>
        <columns>NAME</columns>
        <columns>Title_Formula__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Originating_Office__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Originating_Office__c</field>
            <operation>equals</operation>
            <value>H - Office of Administrative Services</value>
        </filters>
        <label>H - Office of Administrative Services</label>
    </listViews>
    <listViews>
        <fullName>I_Office_of_the_GSA_IT</fullName>
        <columns>NAME</columns>
        <columns>Title_Formula__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Originating_Office__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Originating_Office__c</field>
            <operation>equals</operation>
            <value>I - Office of the GSA IT</value>
        </filters>
        <label>I - Office of the GSA IT</label>
    </listViews>
    <listViews>
        <fullName>J_Office_of_the_Inspector_General</fullName>
        <columns>NAME</columns>
        <columns>Title_Formula__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Originating_Office__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Originating_Office__c</field>
            <operation>equals</operation>
            <value>J - Office of the Inspector General</value>
        </filters>
        <label>J - Office of the Inspector General</label>
    </listViews>
    <listViews>
        <fullName>L_Office_of_the_General_Counsel</fullName>
        <columns>NAME</columns>
        <columns>Title_Formula__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Originating_Office__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Originating_Office__c</field>
            <operation>equals</operation>
            <value>L - Office of the General Counsel</value>
        </filters>
        <label>L - Office of the General Counsel</label>
    </listViews>
    <listViews>
        <fullName>M_Office_of_Governmentwide_Policy</fullName>
        <columns>NAME</columns>
        <columns>Title_Formula__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Originating_Office__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Originating_Office__c</field>
            <operation>equals</operation>
            <value>M - Office of Governmentwide Policy</value>
        </filters>
        <label>M - Office of Governmentwide Policy</label>
    </listViews>
    <nameField>
        <displayFormat>CC{000000}</displayFormat>
        <label>Document ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Controlled Documents</pluralLabel>
    <recordTypes>
        <fullName>Contract_Award_Notification</fullName>
        <active>true</active>
        <description>Record Type for Contract Awards Monitoring</description>
        <label>Contract Award Notification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Controlled_Document</fullName>
        <active>true</active>
        <description>Record Type for Controlled Documents</description>
        <label>Controlled Document</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Apex_Managed_Sharing__c</fullName>
        <label>Apex Managed Sharing</label>
    </sharingReasons>
    <validationRules>
        <fullName>Contract_Date_Cannot_be_future_date</fullName>
        <active>true</active>
        <description>Contract date cannot be a future date</description>
        <errorConditionFormula>Contract_Date__c  &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Contract_Date__c</errorDisplayField>
        <errorMessage>Contract date must be today or prior to current date but it cannot be in the future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Delivery1_Date_after_Requested_Due_Date</fullName>
        <active>true</active>
        <description>Requested Due Date - External Delivery 1 must be must be after Requested Due Date Signer.</description>
        <errorConditionFormula>Requested_Due_Date_External_Delivery_1__c  &lt;=  Due_Date__c</errorConditionFormula>
        <errorDisplayField>Requested_Due_Date_External_Delivery_1__c</errorDisplayField>
        <errorMessage>Requested Due Date - External Delivery 1 must be after Requested Due Date Signer.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Does_Directive_Due_Dates_have_Value</fullName>
        <active>true</active>
        <description>External Delivery 1 and External Delivery 2 cannot be used if Directives Coordination or Directives Clearance are populated--and vice versa.</description>
        <errorConditionFormula>(!(isnull(Requested_Due_Date_External_Delivery_1__c)) ||
!(isnull(Requested_Due_Date_External_Delivery_2__c))) &amp;&amp;
(!(isnull( Directives_Coordination_Due_Date__c )) ||
!(isnull(Directives_Clearance_Due_Date__c)))</errorConditionFormula>
        <errorMessage>Enter Dates for either Requested Due Date External Delivery 1 &amp; 2 or for Directive Coordination/Clearance Due Dates.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ES_Due_Date_later_than_ES_Start_Date</fullName>
        <active>true</active>
        <description>ExecSec Due Date is not before ExecSec Start Date</description>
        <errorConditionFormula>ExecSec_Due_Date__c &lt;  ExecSec_Start_Date__c</errorConditionFormula>
        <errorDisplayField>ExecSec_Due_Date__c</errorDisplayField>
        <errorMessage>The ExecSec Due Date must be later than the ExecSec Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>External_Delivery2_After_Delivery1_Date</fullName>
        <active>true</active>
        <description>Requested Due Date - External Delivery 2 must be after the Requested Due Date External Delivery 1.</description>
        <errorConditionFormula>if(!ISNULL(Requested_Due_Date_External_Delivery_1__c),Requested_Due_Date_External_Delivery_2__c &lt;=  Requested_Due_Date_External_Delivery_1__c, if(!ISNULL(Requested_Due_Date_External_Delivery_2__c),true,false))</errorConditionFormula>
        <errorDisplayField>Requested_Due_Date_External_Delivery_2__c</errorDisplayField>
        <errorMessage>Requested Due Date - External Delivery 2 must be  after Requested Due Date - External Delivery 1.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Hard_Due_Dates</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
(ISPICKVAL( External_Hard_Due_Date__c , &quot;Y&quot;)), 
 ( OR (
  ( ISBLANK( Due_Date__c ) ),
  ( ISBLANK( If_Due_Date_Missed__c ) )
)
)
)</errorConditionFormula>
        <errorDisplayField>External_Hard_Due_Date__c</errorDisplayField>
        <errorMessage>You must have a due date and include the consequences if the due date is missed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Is_Request_Due_Date_Signer_Valid</fullName>
        <active>true</active>
        <description>Requested Due Date Signer must be  before External Delivery 1 and 2 or External Delivery Dates 1 and 2 must be empty.</description>
        <errorConditionFormula>IF(!ISNULL(Requested_Due_Date_External_Delivery_1__c),
   IF(Requested_Due_Date_External_Delivery_1__c &gt; Due_Date__c,
      IF(!ISNULL(Requested_Due_Date_External_Delivery_2__c),
         IF(Requested_Due_Date_External_Delivery_2__c &gt;
            Due_Date__c,
         false,
         true), 
      false),
   true),
false)</errorConditionFormula>
        <errorDisplayField>Due_Date__c</errorDisplayField>
        <errorMessage>Requested Due Date Signer should be before the Requested Due Date External Delivery 1 and 2 or  Requested Due Date External Delivery 1 and 2 should not have a Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Originating_office_is_not_default_value</fullName>
        <active>true</active>
        <description>Rule to let users know that the initial requirement was to have &quot;S - Office of Congressional and Intergovernmental Affairs&quot; as the only and default option for Originating Service/Staff Office field for contract monitoring record type.</description>
        <errorConditionFormula>AND(RecordType.Name = &quot;Contract Award Notification&quot;,

 NOT(
     ISPICKVAL(Originating_Office__c, &quot;S - Office of Congressional and Intergovernmental Affairs&quot;)
     )
    )</errorConditionFormula>
        <errorDisplayField>Originating_Office__c</errorDisplayField>
        <errorMessage>Selected Originating office is not the default value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Current_Location</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Current_Location__c, &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Current_Location__c</errorDisplayField>
        <errorMessage>Current Location cannot be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Stage_is_Closed_to_enter_Date_Closed</fullName>
        <active>true</active>
        <description>In order to enter the Closed Date, the Stage field must be set to &quot;Closed&quot;</description>
        <errorConditionFormula>AND( NOT( ISPICKVAL( Stage__c , &quot;Closed&quot;) ) , NOT( ISNULL( Date_Closed__c ) ) )</errorConditionFormula>
        <errorDisplayField>Date_Closed__c</errorDisplayField>
        <errorMessage>The Stage field must be set to &quot;Closed&quot; in order to enter a value for Date Closed.</errorMessage>
    </validationRules>
</CustomObject>